--- a/demo-cluster/.k8s-gen/gitops-kyverno-agent.yaml
+++ b/demo-cluster/.k8s-gen/gitops-kyverno-agent.yaml
@@ -99,56 +99,15 @@ spec:
 
       2. Drift Comparison
 
-      For each Desired resource:
+        For each resource of the full desired state (produced in step 1):
+        * **MANDATORY RESOURCE STATUS DETERMINATION:**
+          1.  **If Desired resource does not exist in the live cluster:** The Action is **CREATE**.
+          2.  **If Desired resource exists in the live cluster:** The Action is **UPDATE** (if fields differ) or **NO CHANGE** (if fields match).
+        * Output summary table:
 
-      A. Identity Match (MANDATORY)
-      A resource matches Live only if ALL match:
-      - apiVersion (normalized)
-      - kind
-      - metadata.name
-      - metadata.namespace (default = "default")
-
-      Cluster-scoped resources MUST use namespace = "".
-
-      If multiple matches → AMBIGUOUS → EXCLUDE.
-
-      --------------------------------------------------
-
-      B. Action Decision (EXACT)
-
-      If no Live match:
-      → Action = CREATE
-
-      If Live match exists:
-      → Compare ONLY these fields:
-        spec, data, stringData, rules, subjects, roleRef
-
-      IGNORE completely:
-        status
-        metadata.uid
-        metadata.resourceVersion
-        metadata.generation
-        metadata.creationTimestamp
-        metadata.managedFields
-        annotations.*
-
-      If equal → Action = NO CHANGE  
-      If different → Action = UPDATE
-
-      --------------------------------------------------
-
-      C. Diff Summary Output
-
-      Output ONLY:
-      | Kind | Namespace | Name | Action |
-
-      Include ONLY:
-      CREATE, UPDATE
-
-      Sort by:
-      Namespace → Kind → Name
-
-      NEVER guess drift or assume Helm resources are unchanged.
+          ```
+          | Kind | Namespace | Name | Action |
+          ```
 
       3.  **Semantic Validation & Impact Prediction:**
 
@@ -163,7 +122,6 @@ spec:
 
           * Identify the `risks`, `misconfigurations`, potential `blockages`, or `errors` that will be caused by the diff.
 
-
       4. Drift Report
 
         Output only meaningful findings, in this order:
@@ -177,26 +135,26 @@ spec:
 
         Short, developer-friendly list describing runtime outcomes of the drift.
 
+
         #### 3️⃣ Risk Analysis
 
         Report **only confirmed, runtime-blocking risks or misconfigurations**.  
         **Omit this section entirely if no blocking issues are found.**
 
-        **Output format (one risk per line):**
-        1. Kubernetes configuration
-          - **Problem:** <concise description>  
-            **Impact:** <exact runtime consequence>  
-            **Mitigation:** <specific, actionable fix>
-        2. Kyverno policy enforcement
-          - **Problem:** <concise description>  
-            **Impact:** <exact runtime consequence>  
-            **Mitigation:** <specific, actionable fix>
+        **Analysis order (strict):**
+        1. Kubernetes configuration (Mandatory)
+        2. Kyverno policy enforcement (Mandatory)
 
         **Rules:**
         - Do **not** repeat the same issue across categories.
         - Base all findings on **explicit evidence from the input**.
         - If a risk cannot cause a runtime failure, exclude it.
 
+        **Output format (one risk per line):**
+        - **Problem:** <concise description>  
+          **Impact:** <exact runtime consequence>  
+          **Mitigation:** <specific, actionable fix>
+          
       5. PR Review Submission
 
         * Always post the final report as a GitHub PR comment.
