--- a/demo-resources/scenario-1/1-game-app.yaml
+++ b/demo-resources/scenario-1/1-game-app.yaml
@@ -1,3 +1,8 @@
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: demo-oss-japan
+---
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
@@ -5,7 +10,7 @@ metadata:
   namespace: argocd
 spec:
   destination:
-    namespace: demo
+    namespace: demo-oss-japan
     server: https://kubernetes.default.svc
   project: user
   revisionHistoryLimit: 3
@@ -15,6 +20,7 @@ spec:
       values: |
         nodeSelector:
           role: storage
+
         tolerations:
           - key: role
             value: storage
@@ -23,9 +29,6 @@ spec:
       
         service:
           type: LoadBalancer
-
-        imagePullSecrets: 
-          - game-2048-pull-secret
 
     repoURL: http://daocloud.github.io/dao-2048/
     targetRevision: "1.2.1"
