--- a/demo-cluster/.k8s-gen/app-manifest.yaml
+++ b/demo-cluster/.k8s-gen/app-manifest.yaml
@@ -1,30 +1,30 @@
-# ---
-# apiVersion: argoproj.io/v1alpha1
-# kind: Application
-# metadata:
-#   name: game-2048
-#   namespace: argocd
-# spec:
-#   destination:
-#     namespace: demo
-#     server: https://kubernetes.default.svc
-#   project: user
-#   revisionHistoryLimit: 3
-#   sources:
-#     - chart: dao-2048
-#       helm:
-#         values: |
-#           replicaCount: 1
+---
+apiVersion: argoproj.io/v1alpha1
+kind: Application
+metadata:
+  name: game-2048
+  namespace: argocd
+spec:
+  destination:
+    namespace: demo
+    server: https://kubernetes.default.svc
+  project: user
+  revisionHistoryLimit: 3
+  sources:
+    - chart: dao-2048
+      helm:
+        values: |
+          replicaCount: 1
 
-#           nodeSelector:
-#             kubernetes.io/hostname: kind-worker
+          nodeSelector:
+            kubernetes.io/hostname: kind-worker
 
-#           service:
-#             type: LoadBalancer
+          service:
+            type: LoadBalancer
 
-#       repoURL: http://daocloud.github.io/dao-2048/
-#       targetRevision: "1.2.1"
-#   syncPolicy:
-#     automated:
-#       prune: true
-#       selfHeal: true
+      repoURL: http://daocloud.github.io/dao-2048/
+      targetRevision: "1.2.1"
+  syncPolicy:
+    automated:
+      prune: true
+      selfHeal: true
