--- a/demo-cluster/.bootstrap/app-of-apps.yaml
+++ b/demo-cluster/.bootstrap/app-of-apps.yaml
@@ -10,9 +10,9 @@ spec:
   project: default
   revisionHistoryLimit: 5
   source:
-    repoURL: https://github.com/lucchmielowski/smart-idp.git
+    repoURL: https://github.com/qasmi/smart-idp.git
     path: ./demo-cluster/.k8s-gen/
-    targetRevision: HEAD
+    targetRevision: demo-luc
   destination:
     server: 'https://kubernetes.default.svc'
     namespace: argocd
