--- a/.github/workflows/validate-gitops.yml
+++ b/.github/workflows/validate-gitops.yml
@@ -59,143 +59,29 @@ jobs:
           echo "🔧 Rendering Helm charts from ArgoCD Applications..."
           mkdir -p /tmp/rendered-manifests
           
-          # Find all ArgoCD Applications with Helm chart sources
-          for app_file in $(find demo-cluster -type f \( -name "*.yaml" -o -name "*.yml" \) ! -path "*/.git/*" | xargs grep -l "kind: Application" | xargs grep -l "chart:"); do
-            echo "Processing Application: $app_file"
-            app_name=$(basename "$app_file" .yaml)
-            
-            # Check if it uses sources (multiple) or source (single)
-            if yq eval ".spec.sources" "$app_file" 2>/dev/null | grep -q "."; then
-              # Multiple sources - process each one with a chart
-              source_count=$(yq eval ".spec.sources | length" "$app_file" 2>/dev/null || echo "0")
-              for i in $(seq 0 $((source_count - 1))); do
-                chart=$(yq eval ".spec.sources[$i].chart" "$app_file" 2>/dev/null)
-                repo_url=$(yq eval ".spec.sources[$i].repoURL" "$app_file" 2>/dev/null)
-                target_revision=$(yq eval ".spec.sources[$i].targetRevision" "$app_file" 2>/dev/null)
-                values=$(yq eval ".spec.sources[$i].helm.values" "$app_file" 2>/dev/null)
-                
-                if [ -n "$chart" ] && [ "$chart" != "null" ] && [ -n "$repo_url" ] && [ "$repo_url" != "null" ]; then
-                  echo "  Rendering chart: $chart from $repo_url${target_revision:+ (version: $target_revision)}"
-                  
-                  # Create a unique repo name from URL
-                  repo_name=$(echo "$repo_url" | sed "s/[^a-zA-Z0-9]/-/g" | cut -c1-50)
-                  
-                  # Add Helm repo if not already added
-                  if ! helm repo list 2>/dev/null | grep -q "$repo_name"; then
-                    helm repo add "$repo_name" "$repo_url" 2>/dev/null || {
-                      echo "    ⚠️  Failed to add repo $repo_url, skipping..."
-                      continue
-                    }
-                  fi
-                  helm repo update "$repo_name" 2>/dev/null || true
-                  
-                  # Create values file if values are present
-                  values_file=""
-                  if [ -n "$values" ] && [ "$values" != "null" ] && [ "$values" != "|" ]; then
-                    values_file=$(mktemp)
-                    echo "$values" > "$values_file"
-                  fi
-                  
-                  # Render the chart
-                  output_file="/tmp/rendered-manifests/${app_name}-${chart}-rendered.yaml"
-                  if [ -n "$values_file" ] && [ -s "$values_file" ]; then
-                    if helm template "$chart" "$repo_name/$chart" \
-                      ${target_revision:+--version "$target_revision"} \
-                      --values "$values_file" > "$output_file" 2>&1; then
-                      if [ -s "$output_file" ] && ! grep -qi "error" "$output_file"; then
-                        echo "    ✅ Successfully rendered $chart"
-                      else
-                        echo "    ⚠️  Rendering produced errors or empty output"
-                        rm -f "$output_file"
-                      fi
-                    else
-                      echo "    ⚠️  Failed to render $chart"
-                      rm -f "$output_file"
-                    fi
-                    rm -f "$values_file"
-                  else
-                    if helm template "$chart" "$repo_name/$chart" \
-                      ${target_revision:+--version "$target_revision"} > "$output_file" 2>&1; then
-                      if [ -s "$output_file" ] && ! grep -qi "error" "$output_file"; then
-                        echo "    ✅ Successfully rendered $chart"
-                      else
-                        echo "    ⚠️  Rendering produced errors or empty output"
-                        rm -f "$output_file"
-                      fi
-                    else
-                      echo "    ⚠️  Failed to render $chart"
-                      rm -f "$output_file"
-                    fi
-                  fi
-                fi
-              done
-            else
-              # Single source
-              chart=$(yq eval ".spec.source.chart" "$app_file" 2>/dev/null)
-              repo_url=$(yq eval ".spec.source.repoURL" "$app_file" 2>/dev/null)
-              target_revision=$(yq eval ".spec.source.targetRevision" "$app_file" 2>/dev/null)
-              values=$(yq eval ".spec.source.helm.values" "$app_file" 2>/dev/null)
-              
-              if [ -n "$chart" ] && [ "$chart" != "null" ] && [ -n "$repo_url" ] && [ "$repo_url" != "null" ]; then
-                echo "  Rendering chart: $chart from $repo_url${target_revision:+ (version: $target_revision)}"
-                
-                # Create a unique repo name from URL
-                repo_name=$(echo "$repo_url" | sed "s/[^a-zA-Z0-9]/-/g" | cut -c1-50)
-                
-                # Add Helm repo if not already added
-                if ! helm repo list 2>/dev/null | grep -q "$repo_name"; then
-                  helm repo add "$repo_name" "$repo_url" 2>/dev/null || {
-                    echo "    ⚠️  Failed to add repo $repo_url, skipping..."
-                    continue
-                  }
-                fi
-                helm repo update "$repo_name" 2>/dev/null || true
-                
-                # Create values file if values are present
-                values_file=""
-                if [ -n "$values" ] && [ "$values" != "null" ] && [ "$values" != "|" ]; then
-                  values_file=$(mktemp)
-                  echo "$values" > "$values_file"
-                fi
-                
-                # Render the chart
-                output_file="/tmp/rendered-manifests/${app_name}-${chart}-rendered.yaml"
-                if [ -n "$values_file" ] && [ -s "$values_file" ]; then
-                  if helm template "$chart" "$repo_name/$chart" \
-                    ${target_revision:+--version "$target_revision"} \
-                    --values "$values_file" > "$output_file" 2>&1; then
-                    if [ -s "$output_file" ] && ! grep -qi "error" "$output_file"; then
-                      echo "    ✅ Successfully rendered $chart"
-                    else
-                      echo "    ⚠️  Rendering produced errors or empty output"
-                      rm -f "$output_file"
-                    fi
-                  else
-                    echo "    ⚠️  Failed to render $chart"
-                    rm -f "$output_file"
-                  fi
-                  rm -f "$values_file"
-                else
-                  if helm template "$chart" "$repo_name/$chart" \
-                    ${target_revision:+--version "$target_revision"} > "$output_file" 2>&1; then
-                    if [ -s "$output_file" ] && ! grep -qi "error" "$output_file"; then
-                      echo "    ✅ Successfully rendered $chart"
-                    else
-                      echo "    ⚠️  Rendering produced errors or empty output"
-                      rm -f "$output_file"
-                    fi
-                  else
-                    echo "    ⚠️  Failed to render $chart"
-                    rm -f "$output_file"
-                  fi
-                fi
-              fi
-            fi
-          done
+          app_file="demo-cluster/.k8s-gen/app-manifest.yaml"
+          chart=$(yq eval ".spec.source.chart" "$app_file")
+          repo_url=$(yq eval ".spec.source.repoURL" "$app_file")
+          target_revision=$(yq eval ".spec.source.targetRevision" "$app_file")
+          values=$(yq eval ".spec.source.helm.values" "$app_file")
+          
+          echo "Rendering chart: $chart from $repo_url"
+          
+          repo_name=$(echo "$repo_url" | sed "s/[^a-zA-Z0-9]/-/g" | cut -c1-50)
+          helm repo add "$repo_name" "$repo_url" || exit 1
+          helm repo update "$repo_name"
+          
+          output_file="/tmp/rendered-manifests/app-manifest-${chart}-rendered.yaml"
+          if [ -n "$values" ] && [ "$values" != "null" ] && [ "$values" != "|" ]; then
+            values_file=$(mktemp)
+            echo "$values" > "$values_file"
+            helm template "$chart" "$repo_name/$chart" --version "$target_revision" --values "$values_file" > "$output_file"
+            rm -f "$values_file"
+          else
+            helm template "$chart" "$repo_name/$chart" --version "$target_revision" > "$output_file"
+          fi
           
           echo "✅ Helm chart rendering complete"
-          echo "📋 Rendered manifests:"
-          ls -la /tmp/rendered-manifests/ 2>/dev/null || echo "  (none found)"
 
       - name: Validate rendered Helm manifests
         run: |
@@ -217,17 +103,7 @@ jobs:
           echo "📋 Collecting Kubernetes resources for validation..."
           mkdir -p /tmp/kyverno-resources
           
-          # Copy non-Application resources from demo-cluster
-          find demo-cluster -type f \( -name "*.yaml" -o -name "*.yml" \) \
-            ! -path "*/.git/*" \
-            -exec sh -c '
-              if grep -q "kind:" "$1" && grep -q "apiVersion:" "$1" && ! grep -qE "^kind: Application$" "$1"; then
-                cp "$1" /tmp/kyverno-resources/
-                echo "  Found: $1"
-              fi
-            ' _ {} \;
-          
-          # Copy rendered Helm manifests (excluding Applications)
+          # Only copy rendered Helm manifests from app-manifest.yaml (excluding Applications)
           if [ -d /tmp/rendered-manifests ] && [ "$(ls -A /tmp/rendered-manifests)" ]; then
             find /tmp/rendered-manifests -type f \( -name "*.yaml" -o -name "*.yml" \) \
               -exec sh -c '
@@ -245,7 +121,7 @@ jobs:
         uses: ckotzbauer/kyverno-test-action@v2
         with:
           resource-files: '/tmp/kyverno-resources/*.yaml'
-          policy-files: 'https://raw.githubusercontent.com/lucchmielowski/kyverno-mcp/refs/heads//pkg/tools/policies/pod-security.yaml'
+          policy-files: 'https://raw.githubusercontent.com/lucchmielowski/kyverno-mcp/refs/heads/main/pkg/tools/policies/pod-security.yaml'
 
       - name: Summary
         if: success()
